@@ -89,7 +89,9 @@ $page_title = api_plugin_hook_function('page_title', draw_navigation_text("title
 <head>
 	<title><?php echo $page_title; ?></title>
 	<?php
-	if (isset($_SESSION["custom"])) {
+	if (isset($_SESSION["custom"]) && $_SESSION["custom"] == true) {
+		print "<meta http-equiv=refresh content='99999'>\r\n";
+	}else if (isset($_SESSION["action"]) && $_SESSION["action"] == 'zoom') {
 		print "<meta http-equiv=refresh content='99999'>\r\n";
 	}else{
 		$refresh = api_plugin_hook_function('top_graph_refresh', '0');
